# alias-ecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/alias/: ecs.h
src/: archetype.c  component.c  entity.c  instance.c  layer.c  local.h  memory.c  query.c
test/: add_component.c  component_set.c  create_component.c  create_instance.c  create_layer.c  internal_archetype.c  internal_bsearch.c  internal_sort.c  local.h  main.c  query.c  remove_component.c  spawn.c
